SubVersion: $Id$

- 30/06/2004, version 1.71: roms
	Julein Debroux's suggestions:
	- debug access is slow: fixed
	- window focus: ...

- 05/05/2004, version 1.70: roms
	Rework in progress.	

=====> TiEmu II project re-starts here <=====

- 02/07/2003, version 1.68: jb
	Removed GTK+ 1.2 to GTK+ 2.0.

- 02/01/2003, version 1.68:
	Removed automake support in ./src. Switched to a pure autoconf support.
	Some warning removed.
	
- 30/01/2003, version 1.67:
	Automake reworked and improved. Bu, I still have these ugly links.
	Compilable under MinGW for K. Kofler.	
	
- 01/11/2002, version 1.66:
	Automake/Autoconf does not support sub-dirs any longer -> file are 
	linked now (ugly !).
	
- 13/10/2002, version 1.65:
	Changed to support libticalcs v4.x.x.
	Compilation fixes.
	
- 02/08/2002, version 1.64:
	Changed to support libticalcs v4.x.x. 
	Compilation fixes.
	
- 02/06/2002, version 1.63b:
	FLASH upgrade support works fine now.
	
- 01/06/2002, version 1.63a:
	Beta release.
	
- 01/06/2002, version 1.62q:
	GUI slightly modified (wizard, ROM version, ...) and FLASH upgrade
	management: support unified.
	
- 31/05/2002, version 1.62p:
	Merge with Win32 port attempt.
	
- 30/05/2002, version 1.62o:
	Linkport improved and cleaned-up. Fully works.
	A FLASH upgraded converted into a ROM image with TiLP works...
	
- 30/05/2002, version 1.62m:
	HW memory support improved but it's still impossible to directly load
	a FLASH upgrade as a ROM image.
	
- 29/05/2002, version 1.62l:
	Attemp to thread TiEmu and to remove suspend/unsuspend removed: failed.
	But, some clean-up has been done.
	
- 29/05/2002, version 1.62k:
	Added the ability to change skin.
	
- 28/05/2002, version 1.62j:
	Skin support updated for supporting TiEmu skins (imported skinops.c
	from JB's SkinEdit)
	FLASH upgrade support to improve (if we load directly an upgrade,
	this will not work but it works after a ROM image).
	GUI clean-up finished.
	
- 27/05/2002, version 1.62i: