@@ -1,4 +1,4 @@
 #include <gtk/gtk.h>
 
+GtkWidget* create_dbgbkpts_window(void);
 GtkWidget* display_dbgbkpts_window(void);
-GtkWidget* refresh_dbgbkpts_window(void);
