@@ -1,4 +1,4 @@
 #include <gtk/gtk.h>
 
+GtkWidget* create_dbgcode_window(void);
 GtkWidget* display_dbgcode_window(void);
-GtkWidget* refresh_dbgcode_window(void);
