@@ -1,7 +1,7 @@
 #include <gtk/gtk.h>
 
 
+GtkWidget* create_dbgmem_window(void);
 GtkWidget* display_dbgmem_window(void);
-GtkWidget* refresh_dbgmem_window(void);
 
 gint display_dbgmem_dbox(int *addr);
