@@ -1,4 +1,4 @@
 #include <gtk/gtk.h>
 
+GtkWidget* create_dbgpclog_window(void);
 GtkWidget* display_dbgpclog_window(void);
-GtkWidget* refresh_dbgpclog_window(void);
