@@ -1,4 +1,4 @@
 #include <gtk/gtk.h>
 
+GtkWidget* create_dbgregs_window(void);
 GtkWidget* display_dbgregs_window(void);
-GtkWidget* refresh_dbgregs_window(void);
